--- a/Frontend/src/Css/Home.css
+++ b/Frontend/src/Css/Home.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap&family=Hammersmith+One&family=Londrina+Solid:wght@900&display=swap');
-.bg-planet-svg {
+/* .bg-planet-svg {
     position: absolute;
     top: 250px;
     right: -205px;
@@ -23,7 +23,7 @@
     z-index: -5;
     width: 450px;
     opacity: 0.8;
-}
+} */
 
 .story-card-wrapper {
     position: relative;
@@ -78,7 +78,7 @@
 
 .story-card img.story-image {
     width: 100%;
-    height: 225px;
+    height: 80%;
     border-radius: 6px 6px 0 0;
     object-fit: cover;
 }
@@ -90,12 +90,12 @@
 .story-card h5.story-title {
     font-size: 1.4rem;
     line-height: 30px;
-    height: 87px;
+    height: 20%;
     letter-spacing: 0.6px;
     color: black;
-    padding: 10px 3px;
+    /* padding: 10px 3px; */
     font-weight: bold;
-    margin-bottom: 1.2rem;
+    /* margin-bottom: 1rem; */
     word-wrap: break-word;
     font-family: 'Hammersmith One', sans-serif;
     font-family: 'Londrina Solid', cursive;
