--- a/Frontend/src/Css/DetailStory.css
+++ b/Frontend/src/Css/DetailStory.css
@@ -95,9 +95,14 @@ li.story-readtime {
     line-height: 32px;
 }
 
+.story-content {
+    display: flex;
+}
+
 .story-banner-img {
     width: 100%;
     display: flex;
+    flex-grow: 2;
     justify-content: center;
 }
 
@@ -140,8 +145,11 @@ li.story-readtime {
 }
 
 .story-content .content {
-    width: 92%;
+    width: 50%;
+    flex-grow: 1;
     margin: 0 auto;
+    padding: 1rem;
+    border-left: 1px solid rgb(236, 236, 236);
 }
 
 .bottom-sec-item {
